--- a/Магниты в МРТ.md
+++ b/Магниты в МРТ.md
@@ -80,3 +80,6 @@ theme:
 - Акустический шум
 - Артефакты движения
 - Техническая сложность
+
+---
+![Магнит](http://24radiology.ru/wp-content/uploads/2016/08/image-2.png)
